Fix: #1539 - missing horizontal scrollbars in relationship chart

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -425,7 +425,7 @@ wt-pedigree-chart .spacer {
  *
  * wt-chart, wt-relationships-chart
  */
-#relationship-page .person_box_template {
+.wt-relationship-chart .person_box_template {
 	line-height: 1.0;
 }
 .vline-text, .hline-text {	font-size: 0.7rem;
